--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
      </div>
     </div>
     <div class="bg-white shadow-md rounded-lg overflow-hidden">
-     <img alt="suíte" class="w-full h-48 object-cover" height="400" src="quarto1.jpg" width="600"/>
+     <img alt="suíte" class="w-full h-48 object-cover" height="400" src="Polish_20241028_092418677.jpg" width="600"/>
      <div class="p-4">
       <h3 class="text-xl font-bold mb-2">
        Suíte
