--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
      </div>
     </div>
     <div class="bg-white shadow-md rounded-lg overflow-hidden">
-     <img alt="sala de estar" class="w-full h-48 object-cover" height="400" src="sala.jpg" width="600"/>
+     <img alt="sala de estar" class="w-full h-48 object-cover" height="400" src="Polish_20241028_092200342.jpg" width="600"/>
      <div class="p-4">
       <h3 class="text-xl font-bold mb-2">
        Sala de estar
