--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
      </div>
     </div>
     <div class="bg-white shadow-md rounded-lg overflow-hidden">
-     <img alt="frente da casa" class="w-full h-48 object-cover" height="400" src="frente de casa.jpg" width="600"/>
+     <img alt="frente da casa" class="w-full h-48 object-cover" height="400" src="Polish_20241028_091854354.jpg" width="600"/>
      <div class="p-4">
       <h3 class="text-xl font-bold mb-2">
        Parte da frente da casa 
